--- a/app/views/partners/edit.html.erb
+++ b/app/views/partners/edit.html.erb
@@ -24,7 +24,7 @@
           <%= hidden_field_tag :id, @partner.id %>
 
           <div class="form-group">
-            <button class="btn btn-primary" type="submit"><%= t('partners.edit.submitEdit')%></button>
+            <button class="btn btn-primary" type="submit"><%= t('partners.edit.submit')%></button>
           </div>
       <% end %>
     </div>
