--- a/app/views/referentials/new.html.erb
+++ b/app/views/referentials/new.html.erb
@@ -21,7 +21,7 @@
             <%= text_field_tag :token, nil, value: @referential.token, class: "form-control" %>
           </div>
           <div class="form-group">
-            <button class="btn btn-primary" type="submit"><%= t('referentials.create.submitCreate')%></button>
+            <button class="btn btn-primary" type="submit"><%= t('referentials.create.submit')%></button>
           </div>
       <% end %>
     </div>
