--- a/app/views/partners/index.html.erb
+++ b/app/views/partners/index.html.erb
@@ -24,11 +24,11 @@
           <table class="table table-striped table-bordered table-list">
             <thead>
             <tr>
-              <th class="hidden-xs"><%= t('partners.tabTh.id') %></th>
-              <th><%= t('partners.tabTh.slug') %></th>
-              <th><%= t('partners.tabTh.partnerStatus') %></th>
-              <th><%= t('partners.tabTh.connectorTypes') %></th>
-              <th><%= t('partners.tabTh.settings') %></th>
+              <th class="hidden-xs"><%= t('attributes.id') %></th>
+              <th><%= t('attributes.slug') %></th>
+              <th><%= t('attributes.partner_status') %></th>
+              <th><%= t('attributes.connector_types') %></th>
+              <th><%= t('attributes.settings') %></th>
               <th><em class="fa fa-cog"></em></th>
             </tr>
             </thead>
