--- a/app/views/referentials/edit.html.erb
+++ b/app/views/referentials/edit.html.erb
@@ -24,7 +24,7 @@
       <%= hidden_field_tag :id, @referential.id %>
 
       <div class="form-group">
-        <button class="btn btn-primary btn-xs" type="submit"><%= t('referentials.edit.submitEdit')%></button>
+        <button class="btn btn-primary btn-xs" type="submit"><%= t('referentials.edit.submit')%></button>
       </div>
       <% end %>
     </div>
