--- a/app/views/referentials/index.html.erb
+++ b/app/views/referentials/index.html.erb
@@ -19,10 +19,10 @@
           <table class="table table-striped table-bordered table-list">
             <thead>
             <tr>
-              <th class="hidden-xs"><%= t('referentials.tabTh.id')%></th>
-              <th><%= t('referentials.tabTh.slug')%></th>
-              <th><%= t('referentials.tabTh.nextReloadAt')%></th>
-              <th><%= t('referentials.tabTh.token')%></th>
+              <th class="hidden-xs"><%= t('attributes.id')%></th>
+              <th><%= t('attributes.slug')%></th>
+              <th><%= t('attributes.nextReloadAt')%></th>
+              <th><%= t('attributes.token')%></th>
               <th><em class="fa fa-cog"></em></th>
             </tr>
             </thead>
