--- a/app/views/devise/invitations/new.html.slim
+++ b/app/views/devise/invitations/new.html.slim
@@ -1,8 +1,7 @@
 .row
   .col-md-12
-    = link_to referentials_path,
-    -                 class: 'btn btn-default back-button' do
-    em.fa.fa-arrow-left
+    = link_to referentials_path, class: 'btn btn-default back-button' do
+      em.fa.fa-arrow-left
 .row
   .col-md-3
     h2
