--- a/app/views/partners/index.html.erb
+++ b/app/views/partners/index.html.erb
@@ -26,9 +26,9 @@
             <tr>
               <th class="hidden-xs"><%= t('attributes.id') %></th>
               <th><%= t('attributes.slug') %></th>
-              <th><%= t('attributes.partner_status') %></th>
-              <th><%= t('attributes.connector_types') %></th>
-              <th><%= t('attributes.settings') %></th>
+              <th><%= t('partners.attributes.partner_status') %></th>
+              <th><%= t('partners.attributes.connector_types') %></th>
+              <th><%= t('partners.attributes.settings') %></th>
               <th><em class="fa fa-cog"></em></th>
             </tr>
             </thead>
