--- a/app/views/referentials/index.html.erb
+++ b/app/views/referentials/index.html.erb
@@ -21,8 +21,8 @@
             <tr>
               <th class="hidden-xs"><%= t('attributes.id')%></th>
               <th><%= t('attributes.slug')%></th>
-              <th><%= t('attributes.nextReloadAt')%></th>
-              <th><%= t('attributes.token')%></th>
+              <th><%= t('referentials.attributes.next_reload_at')%></th>
+              <th><%= t('referentials.attributes.token')%></th>
               <th><em class="fa fa-cog"></em></th>
             </tr>
             </thead>
