--- a/app/views/devise/invitations/edit.html.slim
+++ b/app/views/devise/invitations/edit.html.slim
@@ -3,7 +3,7 @@ h2
 = form_for resource,
         as: resource_name,
         url: invitation_path(resource_name),
-        html: { :method => :put } do |f|
+        html: { method: :put } do |f|
   = devise_error_messages!
   = f.hidden_field :invitation_token
   - if f.object.class.require_password_on_accepting
