import views structure from BOIV

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,29 +1,25 @@
 doctype html
-html
+html lang=I18n.locale
   head
-    title
-      = t('application.title')
-    meta[name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" charset="utf-8"]
-    = csrf_meta_tags
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => false
-    = javascript_include_tag 'application', 'data-turbolinks-track' => false
-  body.container-fluid
-    .row
-      .navbar
-        .col-xs-12
-          .nav-wrapper
-            nav.navbar.nav-wrapper.container-fluid
-              button.navbar-toggle.glyphicon.glyphicon-menu-hamburger type="button"
-              .navbar.navbar-brand
-                = t('application.title')
-              - if user_signed_in?
-                .nav.navbar-nav.pull-right
-                  = link_to new_user_invitation_path, class: 'btn btn-primary navbar-btn' do
-                    em.fa.fa-envelope
-                    = t('application.invite_button')
-                  = link_to destroy_user_session_path, method: :delete, class: 'btn btn-danger navbar-btn' do
-                    em.fa.fa-sign-out
-                    = t('application.logout_button')
+    meta charset="utf-8"
+    meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
 
-    div
-      = yield
+    = csrf_meta_tag
+
+    title = t('application.title')
+
+    = stylesheet_link_tag 'base'
+    = stylesheet_link_tag 'application'
+
+    = javascript_include_tag 'application'
+
+
+  body
+    = render 'layouts/navigation/main_nav'
+    
+    = render 'layouts/flash_messages', flash: flash
+    
+    = yield
+
+    #sidebar
+      = yield :sidebar
