--- a/app/views/layouts/mailer.html.slim
+++ b/app/views/layouts/mailer.html.slim
@@ -1,8 +1,7 @@
 doctype html
 html
   head
-    meta[http-equiv="Content-Type" content="text/html; charset=utf-8"]
-    style
-      |  /* Email styles need to be inline */ 
+    meta charset="utf-8"
+    /!* Email styles need to be inline */
   body
     = yield
