--- a/app/views/referentials/new.html.slim
+++ b/app/views/referentials/new.html.slim
@@ -1,19 +1,26 @@
-.container
+/ PageHeader
+= pageheader 'map-marker',
+        t('referentials.create.title'),
+        '',
+        ''
+/ PageContent
+.page_content
   .row
     .col-md-12
       = link_to referentials_path, class: 'btn btn-default back-button' do
         em.fa.fa-arrow-left
-  .row
-    h1.text-center
-      = t('referentials.create.title')
-    .col-md-3.col-xs-6
-      = form_tag referentials_path, method: :post do
-        .form-group
-          = label_tag :new_slug
-          = text_field_tag :new_slug, nil, value: @referential.slug, class: "form-control"
-        .form-group
-          = label_tag :token
-          = text_field_tag :token, nil, value: @referential.token, class: "form-control"
-        .form-group
-          button.btn.btn-primary[type="submit"]
-            = t('referentials.create.submit')
+  .container-fluid
+    .row
+      .col-lg-8.col-lg-offset-2.col-md-8.col-md-offset-2.col-sm-10.col-sm-offset-1
+        = form_tag referentials_path, method: :post do
+          .row
+            .col-lg-12
+            .form-group
+              = label_tag :new_slug
+              = text_field_tag :new_slug, nil, value: @referential.slug, class: "form-control"
+            .form-group
+              = label_tag :token
+              = text_field_tag :token, nil, value: @referential.token, class: "form-control"
+            .form-group
+              button.btn.btn-primary[type="submit"]
+                = t('referentials.create.submit')
