--- a/app/views/referentials/index.html.erb
+++ b/app/views/referentials/index.html.erb
@@ -35,15 +35,15 @@
                   <td class="tokens"><%= i["Tokens"].join(',') if i["Tokens"] %></td>
                   <td align="center">
                     <%= link_to referential_partners_path(i["Slug"], token: i["Tokens"].try(:first)),
-                                class: 'btn btn-default' do %>
+                                class: 'btn btn-default show' do %>
                         <em class="fa fa fa-eye"></em>
                     <% end %>
                     <%= link_to edit_referential_path({slug: i["Slug"], token: i["Tokens"].try(:first), id: i["Id"], next_reload_at: i["NextReloadAt"]}),
-                                class: 'btn btn-default' do %>
+                                class: 'btn btn-default edit' do %>
                         <em class="fa fa fa-pencil"></em>
                     <% end %>
                     <%= link_to referential_path(i["Id"]), method: :delete, data: {confirm: "Are you sure you want to delete this referential ?"},
-                                class: 'btn btn-danger' do %>
+                                class: 'btn btn-danger delete' do %>
                         <em class="fa fa fa-trash"></em>
                     <% end %>
                   </td>
