--- a/app/views/referentials/index.html.slim
+++ b/app/views/referentials/index.html.slim
@@ -4,49 +4,61 @@
         '']
 - header_params << link_to(t('referentials.create.title'), new_referential_path, class: 'btn btn-default')
 = pageheader(*header_params)
-.container
-  .row
-    .col-md-12
-  .row
-    h1.text-center
-      = t('referentials.title')
-    .col-md-12
-      .panel.panel-default.panel-table
-        .panel-heading
-          .row
-            .col-md-12
-              = link_to t('referentials.create.title'), new_referential_path, class: 'btn btn-sm btn-primary btn-create pull-right'
 
-        .panel-body
-          table.table.table-striped.table-bordered.table-list
-            thead
-              tr
-                th.hidden-xs
+/ PageContent
+.page_content
+  .container-fluid
+    - if @referentials_tab.any?
+    .row
+      .col-lg-12
+        table.table.has-filter
+          thead
+            tr
+              th
+                a href="/calendars?direction=desc&amp;sort=name"
                   = t('attributes.id')
-                th
+                  span.orderers
+                    span.fa.fa-sort-asc.active
+                    span.fa.fa-sort-desc
+              th
+                a href="/calendars?direction=desc&amp;sort=short_name"
                   = t('attributes.slug')
-                th
+                  span.orderers
+                    span.fa.fa-sort-asc.active
+                    span.fa.fa-sort-desc
+              th
+                a href="/calendars?direction=desc&amp;sort=shared"
                   = t('attributes.attributes.next_reload_at')
-                th
+                  span.orderers
+                    span.fa.fa-sort-asc.active
+                    span.fa.fa-sort-desc
+              th
+                a href="/calendars?direction=desc&amp;sort=shared"
                   = t('attributes.attributes.token')
-                th
-                  em.fa.fa-cog
-            tbody
-              - @referentials_tab.each do |i|
-                tr
-                  td.hidden-xs
-                    = i["Id"]
-                  td
-                    = i["Slug"]
-                  td
-                    = i["NextReloadAt"]
-                  td
-                    = i["Tokens"][0]
-                  td[align="center"]
-                    = link_to referential_partners_path(i["Slug"], token: i["Tokens"][0]), class: 'btn btn-default' do
-                      em.fa.fa.fa-eye
-                    = link_to edit_referential_path({slug: i["Slug"], token: i["Tokens"][0], id: i["Id"], next_reload_at: i["NextReloadAt"]}), class: 'btn btn-default' do
-                      em.fa.fa.fa-pencil
-                    = link_to referential_path(i["Id"]), method: :delete, data: {confirm: "Are you sure you want to delete this referential ?"}, class: 'btn btn-danger' do
-                      em.fa.fa.fa-trash
-
+                  span.orderers
+                    span.fa.fa-sort-asc.active
+                    span.fa.fa-sort-desc
+              th
+          tbody
+          - @referentials_tab.each do |i|
+            tr
+              td title="Voir"
+                a href="/calendars/1"  = i["Id"]
+              td = i["Slug"]
+              td = i["NextReloadAt"]
+              td = i["Tokens"][0]
+              td.actions
+                .btn-group
+                  .btn.dropdown-toggle data-toggle="dropdown"
+                    span.fa.fa-cog
+                  ul.dropdown-menu
+                    li
+                      = link_to referential_partners_path(i["Slug"], token: i["Tokens"][0]) do
+                        | Consulter
+                    li
+                      = link_to edit_referential_path({slug: i["Slug"], token: i["Tokens"][0], id: i["Id"], next_reload_at: i["NextReloadAt"]}) do
+                        | Editer
+                    li.delete-action
+                      = link_to referential_path(i["Id"]), method: :delete, data: {confirm: "Are you sure you want to delete this referential ?"} do
+                        span.fa.fa-trash.mr-xs
+                        | Supprimer
