--- a/app/views/partners/index.html.slim
+++ b/app/views/partners/index.html.slim
@@ -5,86 +5,73 @@
 - header_params << link_to(t('partners.create.title'), new_referential_partner_path(token: @referential_token), class: 'btn btn-default')
 = pageheader(*header_params)
 
-
-
-
 / PageContent
 .page_content
-  .container-fluid
-      .row
-        .col-lg-12
-          = tavb ble_builder_2 @calendars,
-                  [\
-              TableBuilderHelper::Column.new(\
-                key: :name, \
-                attribute: 'name' \
-              ), \
-              TableBuilderHelper::Column.new(\
-                key: :short_name, \
-                attribute: 'short_name' \
-              ), \
-              TableBuilderHelper::Column.new(\
-                key: :shared, \
-                attribute: Proc.new {|c| t("#{c.try(:shared)}")} \
-              ) \
-            ],
-                  links: [:show, :edit],
-                  cls: 'table has-filter'
-
-
-.container
   .row
     .col-md-12
       = link_to referentials_path, class: 'btn btn-default back-button' do
         em.fa.fa-arrow-left
-  .row
-    h1.text-center
-      = t('partners.title')
-      = @referential_slug
-    .col-md-12
-      .panel.panel-default.panel-table
-        .panel-heading
-          .row
-            .col-md-12
-              .col-md-12
-                = link_to t('partners.create.title'), new_referential_partner_path(token: @referential_token), class: 'btn btn-sm btn-primary btn-create pull-right'
-        .panel-body
-          table.table.table-striped.table-bordered.table-list
-            thead
-              tr
-                th.hidden-xs
+  .container-fluid
+    .row
+      .col-lg-12
+        table.table.has-filter
+          thead
+            tr
+              th
+                a href="/calendars?direction=desc&amp;sort=name"
                   = t('attributes.id')
-                th
-                  = t('attributes.slug')
-                th
-                  = t('partners.attributes.partner_status')
-                th
+                  span.orderers
+                    span.fa.fa-sort-asc.active
+                    span.fa.fa-sort-desc
+              th
+                a href="/calendars?direction=desc&amp;sort=short_name"
+                  = t('partners.slug')
+                  span.orderers
+                    span.fa.fa-sort-asc.active
+                    span.fa.fa-sort-desc
+              th
+                a href="/calendars?direction=desc&amp;sort=shared"
+                  = t('attributes.attributes.partner_status')
+                  span.orderers
+                    span.fa.fa-sort-asc.active
+                    span.fa.fa-sort-desc
+              th
+                a href="/calendars?direction=desc&amp;sort=shared"
                   = t('partners.attributes.connector_types')
-                th
+                  span.orderers
+                    span.fa.fa-sort-asc.active
+                    span.fa.fa-sort-desc
+              th
+                a href="/calendars?direction=desc&amp;sort=shared"
                   = t('partners.attributes.settings')
-                th
-                  em.fa.fa-cog
-            tbody
-              - @partners_tab.each do |i|
-                tr
-                  td.hidden-xs
-                    = i["Id"]
-                  td
-                    = i["Slug"]
-                  td
-                    - i["PartnerStatus"].each do |key, value|
-                      = ">#{key}: #{value}"
-                      br
-                  td
-                    - i["ConnectorTypes"].each do |connector|
-                      = ">#{connector}"
-                      br
-                  td
-                    - i["Settings"].each do |key, value|
-                      = ">#{key}: #{value}"
-                      br
-                  td[align="center"]
-                    = link_to edit_referential_partner_path({partner_slug: i["Slug"], token: @referential_token, id: i["Id"], connector_types: i["ConnectorTypes"], status: i["PartnerStatus"]}), class: 'btn btn-default' do
-                      em.fa.fa.fa-pencil
-                    = link_to referential_partner_path(id: i["Id"], slug: @referential_slug, token: @referential_token), method: :delete, data: {confirm: "Are you sure you want to delete this partner ?"}, class: 'btn btn-danger' do
-                      em.fa.fa.fa-trash
+                  span.orderers
+                    span.fa.fa-sort-asc.active
+                    span.fa.fa-sort-desc
+              th
+          tbody
+          - @partners_tab.each do |i|
+            tr
+              td title="Voir"
+                a href="/calendars/1"  = i["Id"]
+              td = i["Slug"]
+              td
+                - i["PartnerStatus"].each do |key, value|
+                  = ">#{key}: #{value}"
+              td
+                - i["ConnectorTypes"].each do |connector|
+                  = ">#{connector}"
+              td
+                - i["Settings"].each do |key, value|
+                  = ">#{key}: #{value}"
+              td.actions
+                .btn-group
+                  .btn.dropdown-toggle data-toggle="dropdown"
+                    span.fa.fa-cog
+                  ul.dropdown-menu
+                    li
+                      = link_to edit_referential_partner_path({partner_slug: i["Slug"], token: @referential_token, id: i["Id"], connector_types: i["ConnectorTypes"], status: i["PartnerStatus"]}), class: 'btn btn-default' do
+                        | Editer
+                    li.delete-action
+                      = link_to referential_partner_path(id: i["Id"], slug: @referential_slug, token: @referential_token), method: :delete, data: {confirm: "Are you sure you want to delete this partner ?"} do
+                        span.fa.fa-trash.mr-xs
+                        | Supprimer
