fix translate path in views

--- a/app/views/partners/index.html.slim
+++ b/app/views/partners/index.html.slim
@@ -21,9 +21,9 @@
                 th.hidden-xs
                   = t('attributes.id')
                 th
-                  = t('partners.slug')
+                  = t('attributes.slug')
                 th
-                  = t('attributes.attributes.partner_status')
+                  = t('partners.attributes.partner_status')
                 th
                   = t('partners.attributes.connector_types')
                 th
