--- a/app/views/referentials/index.html.slim
+++ b/app/views/referentials/index.html.slim
@@ -22,9 +22,9 @@
                 th
                   = t('attributes.slug')
                 th
-                  = t('attributes.attributes.next_reload_at')
+                  = t('referentials.attributes.next_reload_at')
                 th
-                  = t('attributes.attributes.token')
+                  = t('referentials.attributes.token')
                 th
                   em.fa.fa-cog
             tbody
