--- a/app/views/referentials/index.html.slim
+++ b/app/views/referentials/index.html.slim
@@ -32,17 +32,16 @@
                 tr
                   td.hidden-xs
                     = i["Id"]
-                  td
+                  td.slug
                     = i["Slug"]
                   td
                     = i["NextReloadAt"]
-                  td
-                    = i["Tokens"][0]
+                  td.tokens
+                    = i["Tokens"].join(',') if i["Tokens"]
                   td[align="center"]
-                    = link_to referential_partners_path(i["Slug"], token: i["Tokens"][0]), class: 'btn btn-default' do
+                    = link_to referential_partners_path(i["Slug"], token: i["Tokens"].try(:first)), class: 'btn btn-default show' do
                       em.fa.fa.fa-eye
-                    = link_to edit_referential_path({slug: i["Slug"], token: i["Tokens"][0], id: i["Id"], next_reload_at: i["NextReloadAt"]}), class: 'btn btn-default' do
+                    = link_to edit_referential_path({slug: i["Slug"], token: i["Tokens"].try(:first), id: i["Id"], next_reload_at: i["NextReloadAt"]}), class: 'btn btn-default edit' do
                       em.fa.fa.fa-pencil
-                    = link_to referential_path(i["Id"]), method: :delete, data: {confirm: "Are you sure you want to delete this referential ?"}, class: 'btn btn-danger' do
+                    = link_to referential_path(i["Id"]), method: :delete, data: {confirm: "Are you sure you want to delete this referential ?"}, class: 'btn btn-danger delete' do
                       em.fa.fa.fa-trash
-
