--- a/app/views/referentials/index.html.slim
+++ b/app/views/referentials/index.html.slim
@@ -41,7 +41,7 @@
                   td[align="center"]
                     = link_to referential_partners_path(i["Slug"], token: i["Tokens"].try(:first)), class: 'btn btn-default show' do
                       em.fa.fa.fa-eye
-                    = link_to edit_referential_path({slug: i["Slug"], token: i["Tokens"].try(:first), id: i["Id"], next_reload_at: i["NextReloadAt"]}), class: 'btn btn-default edit' do
+                    = link_to edit_referential_path({slug: i["Slug"], id: i["Id"]}), class: 'btn btn-default edit' do
                       em.fa.fa.fa-pencil
                     = link_to referential_path(i["Id"]), method: :delete, data: {confirm: "Are you sure you want to delete this referential ?"}, class: 'btn btn-danger delete' do
                       em.fa.fa.fa-trash
