add color dot for OperationalStatus on tables

--- a/app/assets/stylesheets/components/_buttons.sass
+++ b/app/assets/stylesheets/components/_buttons.sass
@@ -17,7 +17,6 @@
   &.btn-circle
     position: relative
     top: 50%
-    transform: translateY(-50%)
     border: 1px solid $blue
     background-color: transparent
     width: 22px
@@ -83,6 +82,15 @@
     .open > .btn-primary.dropdown-toggle
       background-color: $red
       color: #fff
+
+  &.btn-unknown
+    background-color: $grey
+
+  &.btn-up
+    background-color: $green
+
+  &.btn-down
+    background-color: $red
 
   + .btn
     margin-left: 15px
