add back button to referential home

--- a/app/views/referentials/show.html.slim
+++ b/app/views/referentials/show.html.slim
@@ -6,6 +6,10 @@
 
 / PageContent
 .page_content
+  .row
+    .col-md-12
+      = link_to referentials_path, class: 'btn btn-default back-button' do
+        em.fa.fa-arrow-left
   .container-fluid
     .row
       .col-lg-6.col-md-6.col-sm-12.col-xs-12
