--- a/app/views/referentials/index.html.slim
+++ b/app/views/referentials/index.html.slim
@@ -26,12 +26,12 @@
           tbody
           - @referentials_tab.each do |i|
             tr
-              td = i["Slug"]
+              td.slug = i["Slug"]
               td = i["NextReloadAt"]
               - if i["Tokens"] == nil
-                td 0
+                td.tokens 0
               - else
-                td = i["Tokens"].count
+                td.tokens = i["Tokens"].count
               - if i["Partners"] == nil
                 td 0
               - else
@@ -41,14 +41,14 @@
                   .btn.dropdown-toggle data-toggle="dropdown"
                     span.fa.fa-cog
                   ul.dropdown-menu
-                    li
-                      = link_to referential_path({slug: i["Slug"], token: i["Tokens"][0], id: i["Id"], next_reload_at: i["NextReloadAt"], partner: i["Partners"]}) do
+                    li.show-action
+                      = link_to referential_path({slug: i["Slug"], token: i["Tokens"].try(:first), id: i["Id"], next_reload_at: i["NextReloadAt"], partner: i["Partners"]}) do
                         | Voir
                     li
-                      = link_to referential_partners_path(i["Slug"], token: i["Tokens"][0]) do
+                      = link_to referential_partners_path(i["Slug"], token: i["Tokens"].try(:first)) do
                         | Consulter les partners
-                    li
-                      = link_to edit_referential_path({slug: i["Slug"], token: i["Tokens"][0], id: i["Id"], next_reload_at: i["NextReloadAt"], partner: i["Partners"]}) do
+                    li.edit-action
+                      = link_to edit_referential_path({slug: i["Slug"], token: i["Tokens"].try(:first), id: i["Id"], next_reload_at: i["NextReloadAt"], partner: i["Partners"]}) do
                         | Editer
                     li.delete-action
                       = link_to referential_path(i["Id"]), method: :delete, data: {confirm: "Are you sure you want to delete this referential ?"} do
