--- a/app/views/referentials/new.html.slim
+++ b/app/views/referentials/new.html.slim
@@ -16,11 +16,11 @@
           .row
             .col-lg-12
             .form-group
-              = label_tag :new_slug
-              = text_field_tag :new_slug, nil, value: @referential.slug, class: "form-control"
+              = label_tag :slug
+              = text_field_tag "referential[slug]", nil, value: @referential.slug, class: "form-control"
             .form-group
-              = label_tag :token
-              = text_field_tag :token, nil, value: @referential.token, class: "form-control"
+              = label_tag :tokens
+              = text_field_tag "referential[token_list]", nil, value: @referential.token_list, class: "form-control"
             .form-group
               button.btn.btn-primary[type="submit"]
                 = t('referentials.create.submit')
