--- a/app/views/referentials/index.html.slim
+++ b/app/views/referentials/index.html.slim
@@ -8,7 +8,7 @@
 / PageContent
 .page_content
   .container-fluid
-    - if @referentials_tab.any?
+    - if @referentials.any?
     .row
       .col-lg-12
         table.table.has-filter
@@ -24,34 +24,25 @@
                 = t('attributes.partner')
               th
           tbody
-          - @referentials_tab.each do |i|
+          - @referentials.each do |referential|
             tr
-              td.slug = i["Slug"]
-              td = i["NextReloadAt"]
-              - if i["Tokens"] == nil
-                td.tokens 0
-              - else
-                td.tokens = i["Tokens"].count
-              - if i["Partners"] == nil
-                td 0
-              - else
-                td = i["Partners"].count
+              td.slug = referential.slug
+              td = referential.next_reload_at
+              td.tokens = referential.tokens.count
+              td = referential.partner_ids.count
               td.actions
                 .btn-group
                   .btn.dropdown-toggle data-toggle="dropdown"
                     span.fa.fa-cog
                   ul.dropdown-menu
-                    - if i["Tokens"].present?
+                    - if referential.tokens.present?
                       li.show-action
-                        = link_to referential_path({slug: i["Slug"], token: i["Tokens"].try(:first), id: i["Id"], next_reload_at: i["NextReloadAt"], partner: i["Partners"]}) do
+                        = link_to referential_path referential.id do
                           | Voir
-                      li
-                        = link_to referential_partners_path(i["Slug"], token: i["Tokens"].try(:first)) do
-                          | Consulter les partners
                       li.edit-action
-                        = link_to edit_referential_path({slug: i["Slug"], token: i["Tokens"].try(:first), id: i["Id"], next_reload_at: i["NextReloadAt"], partner: i["Partners"]}) do
+                        = link_to edit_referential_path referential.id do
                           | Editer
                     li.delete-action
-                      = link_to referential_path(i["Id"]), method: :delete, data: {confirm: "Are you sure you want to delete this referential ?"} do
+                      = link_to referential_path(referential.id), method: :delete, data: {confirm: "Are you sure you want to delete this referential ?"} do
                         span.fa.fa-trash.mr-xs
                         | Supprimer
