--- a/app/views/partners/index.html.slim
+++ b/app/views/partners/index.html.slim
@@ -1,8 +1,8 @@
 / PageHeader
 - header_params = ['map-marker',
-        t('partners.title') + @referential_slug,
+        t('partners.title') + @referential.slug,
         '']
-- header_params << link_to(t('partners.create.title'), new_referential_partner_path(token: @referential_token), class: 'btn btn-default')
+- header_params << link_to(t('partners.create.title'), new_referential_partner_path(@referential.id), class: 'btn btn-default')
 = pageheader(*header_params)
 
 / PageContent
@@ -18,55 +18,32 @@
           thead
             tr
               th
-                = t('attributes.id')
-              th
                 = t('partners.slug')
-              th
-                = t('attributes.attributes.partner_status')
-              th
-                = t('partners.attributes.connector_types')
-              th
-                = t('partners.attributes.settings')
               th
                 = t('partners.attributes.operational_status')
               th
+                = t('partners.attributes.service_started_at')
+              th
+                = t('partners.attributes.connector_types')
+              th
           tbody
-          - @partners_tab.each do |i|
+          - @partners.each do |partner|
             tr
-              td title="Voir"
-                a href="/calendars/1" = i["Id"]
-              td = i["Slug"]
+              td = partner.slug
               td
-                - i["PartnerStatus"].each do |key, value|
-                  = ">#{key}: #{value}"
-              td
-                - i["ConnectorTypes"].each do |connector|
-                  = ">#{connector}"
-              td
-                - i["Settings"].each do |key, value|
-                  = ">#{key}: #{value}"
-
-              - if i["PartnerStatus"]["OperationnalStatus"] == "unknown"
-                td
-                  .btn-group
-                    .btn.btn-circle.btn-unknown
-              - elsif i["PartnerStatus"]["OperationnalStatus"] == "down"
-                td
-                  .btn-group
-                    .btn.btn-circle.btn-down
-              - elsif i["PartnerStatus"]["OperationnalStatus"] == "up"
-                td
-                  .btn-group
-                    .btn.btn-circle.btn-up
+                .btn-group
+                  .btn.btn-circle class="btn-#{partner.operationnal_status}"
+              td = partner.service_started_at
+              td = partner.connector_types.count
               td.actions
                 .btn-group
                   .btn.dropdown-toggle data-toggle="dropdown"
                     span.fa.fa-cog
                   ul.dropdown-menu
                     li
-                      = link_to edit_referential_partner_path({partner_slug: i["Slug"], token: @referential_token, id: i["Id"], connector_types: i["ConnectorTypes"], status: i["PartnerStatus"]}), class: 'btn btn-default' do
+                      = link_to edit_referential_partner_path(@referential.id, partner.id), class: 'btn btn-default' do
                         | Editer
                     li.delete-action
-                      = link_to referential_partner_path(id: i["Id"], slug: @referential_slug, token: @referential_token), method: :delete, data: {confirm: "Are you sure you want to delete this partner ?"} do
+                      = link_to referential_partner_path(@referential.id, partner.id), method: :delete, data: {confirm: "Are you sure you want to delete this partner ?"} do
                         span.fa.fa-trash.mr-xs
                         | Supprimer
