move informations partners to referential#show Refs #4331

--- a/app/views/partners/edit.html.slim
+++ b/app/views/partners/edit.html.slim
@@ -7,7 +7,7 @@
 .page_content
   .row
     .col-md-12
-      = link_to referential_partners_path(@referential.id), class: 'btn btn-default back-button' do
+      = link_to referential_path(@referential.id), class: 'btn btn-default back-button' do
         em.fa.fa-arrow-left
   .container-fluid
     .row
