--- a/app/views/referentials/index.html.slim
+++ b/app/views/referentials/index.html.slim
@@ -19,9 +19,9 @@
               th
                 = t('attributes.attributes.next_reload_at')
               th
-                = t('attributes.attributes.token')
+                = t('referentials.attributes.token')
               th
-                = t('attributes.partner')
+                = t('referentials.attributes.partner')
               th
           tbody
           - @referentials.each do |referential|
