--- a/app/views/devise/invitations/new.html.slim
+++ b/app/views/devise/invitations/new.html.slim
@@ -1,20 +1,28 @@
-.row
-  .col-md-12
-    = link_to referentials_path, class: 'btn btn-default back-button' do
-      em.fa.fa-arrow-left
-.row
-  .col-md-3
-    h2
-      = t "devise.invitations.new.header"
-    = form_for resource,
-            as: resource_name,
-            url: invitation_path(resource_name),
-            html: { method: :post } do |f|
-      = devise_error_messages!
-      - resource.class.invite_key_fields.each do |field|
-        p
-          = f.label field
-          br
-          = f.text_field field, class: "form-control"
-      p
-        = f.submit t("devise.invitations.new.submit_button"), class: "btn btn-default"
+/ PageHeader
+- header_params = ['map-marker',
+        t('devise.invitations.new.header'),
+        '']
+= pageheader(*header_params)
+
+
+/ PageContent
+.page_content
+  .row
+    .col-md-12
+      = link_to referentials_path, class: 'btn btn-default back-button' do
+        em.fa.fa-arrow-left
+  .container-fluid
+    .row
+      .col-lg-8.col-lg-offset-2.col-md-8.col-md-offset-2.col-sm-10.col-sm-offset-1
+        = form_for resource,
+                as: resource_name,
+                url: invitation_path(resource_name),
+                html: { method: :post } do |f|
+          = devise_error_messages!
+          - resource.class.invite_key_fields.each do |field|
+            p
+              = f.label field
+              br
+              = f.text_field field, class: "form-control"
+          p
+            = f.submit t("devise.invitations.new.submit_button"), class: "btn btn-primary"
