--- a/app/views/referentials/show.html.slim
+++ b/app/views/referentials/show.html.slim
@@ -2,6 +2,7 @@
 - header_params = ['map-marker',
         t('referentials.title') + @referential.slug,
         '']
+- header_params << link_to(t('partners.create.title'), new_referential_partner_path(@referential.id), class: 'btn btn-default')
 = pageheader(*header_params)
 
 / PageContent
@@ -13,9 +14,44 @@
   .container-fluid
     .row
       .col-lg-6.col-md-6.col-sm-12.col-xs-12
-        = definition_list t('ezaeza'),
+        = definition_list t('Informations Referential'),
                 t('attributes.id') => @referential.id,
                 t('attributes.slug') => @referential.slug,
                 t('attributes.token') => @referential.token_list,
                 t('attributes.next_reload_at') => @referential.next_reload_at,
                 t('attributes.partners') => @referential.partner_ids.count
+    .row
+      .col-lg-12
+        table.table.has-filter
+          thead
+            tr
+              th
+                = t('partners.slug')
+              th
+                = t('partners.attributes.operational_status')
+              th
+                = t('partners.attributes.service_started_at')
+              th
+                = t('partners.attributes.connector_types')
+              th
+          tbody
+          - @partners.each do |partner|
+            tr
+              td = partner.slug
+              td
+                .btn-group
+                  .btn.btn-circle class="btn-#{partner.operationnal_status}"
+              td = partner.service_started_at
+              td = partner.connector_types.count
+              td.actions
+                .btn-group
+                  .btn.dropdown-toggle data-toggle="dropdown"
+                    span.fa.fa-cog
+                  ul.dropdown-menu
+                    li
+                      = link_to edit_referential_partner_path(@referential.id, partner.id), class: 'btn btn-default' do
+                        | Editer
+                    li.delete-action
+                      = link_to referential_partner_path(@referential.id, partner.id), method: :delete, data: {confirm: "Are you sure you want to delete this partner ?"} do
+                        span.fa.fa-trash.mr-xs
+                        | Supprimer
