--- a/app/views/partners/new.html.slim
+++ b/app/views/partners/new.html.slim
@@ -12,7 +12,7 @@
   .container-fluid
     .row
       .col-lg-8.col-lg-offset-2.col-md-8.col-md-offset-2.col-sm-10.col-sm-offset-1
-        = form_tag referential_path(@referential.id) do
+        = form_tag referential_partners_path(@referential.id) do
           .col-lg-12
             .form-group
               = label_tag :partner_slug
